# nemo-spinup-forecast

./: .pre-commit-config.yaml  LICENSE  README.md  main.py  main_forecast.py  main_restart.py  nemo_env.sh  pyproject.toml  refactor_README.md  requirements.txt  ruff.toml  setup.py  submit_run.sh  techniques_config.yaml
.github/workflows/: formatting.yml  python.yml  seed-cache-and-test.yml
Notebooks/: Jumper.ipynb  Resample_ssh.ipynb
lib/: density.py  dimensionality_reduction.py  forecast.py  forecast_method.py  forecast_technique.py  optimization.py  restart.py  utils.py
src/nemo_spinup_forecast/: cli.py  density.py  dimensionality_reduction.py  forecast.py  forecast_method.py  optimization.py  pipeline_utils.py  plotting_utils.py  restart.py  utils.py
src/nemo_spinup_forecast/configs/: ocean_terms.DINO.yaml  techniques_config.yaml
standalone/: restarter.py  restarter_V2.py
tests/: conftest.py  download_test_data.sh  test_forecast.py  test_pipeline_utils.py  test_prediction.py  test_simulation.py
