[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nemo-spinup-forecast"
version = "0.1.0"
description = "Hybrid machine learning tooling for NEMO spinup optimization"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.0",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "scipy>=1.10",
    "xarray[io]>=2024.0",
    "scikit-learn>=1.4",
    "skforecast>=0.13",
    "dask[array]>=2024.0",
    "PyYAML>=6.0"
]

[project.scripts]
nemo-spinup-forecast = "nemo_spinup_forecast.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-pythonpath>=0.7",
    "ruff>=0.1",
    "pre-commit>=3.5",
    "mypy>=1.7"
]


[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
nemo_spinup_forecast = [
  "configs/techniques_config.yaml",
  "configs/ocean_terms.DINO.yaml",
]

[tool.pytest.ini_options]
testpaths = [
  "./tests"
]
pythonpath = ["src"]

addopts = "-ra"
